# rustgl-playground

./: .gitignore  Cargo.toml
assets/shaders/: font.frag  font.vert
lib/gl/: Cargo.toml
render_derive/: Cargo.toml
render_derive/src/: lib.rs
src/: game.rs  main.rs  render.rs  resources.rs  triangle_test.frag
src/game/: scene.rs  scenes.rs
src/render/: array_buffer.rs  camera.rs  color_buffer.rs  font.rs  shaders.rs  texture.rs  types.rs  vertex.rs  viewport.rs
