[package]
name = "rustgl"
version = "0.1.0"
authors = ["Matthew Christen"]
edition = "2018"

[build-dependencies]
walkdir = "2.2.7"

[dependencies]
gl = { path = "./lib/gl" }
winit = "0.18.1"
glutin = "0.19.0"
slog = { version = "2.4.1", features = ["max_level_trace", "release_max_level_warn"] }
slog-term = "2.4.0"
slog-async = "2.3.0"
failure = "0.1"
rustgl_render_derive = { path = "render_derive" }